# marmelade

./: .gitlab-ci.yml  Cargo.toml
marmelade-derive/: Cargo.toml
marmelade-derive/src/: lib.rs  serialization.rs  trap_handler.rs
ref/: refdisk.dmg
src/: lib.rs  main.rs  serialread.rs
src/cpu/: address_interface.rs  bus.rs  callback_interface.rs  mod.rs  peripheral.rs  prefix.rs  stackable.rs  trace.rs
src/filesys/: hfs.rs  mod.rs
src/filesys/hfs/: block.rs  blockaccess.rs  btree.rs  catalog.rs  disk.rs  fileadaptor.rs  fileio.rs  mdb.rs  mod.rs  volbitmap.rs
src/filesys/hfs/btree/: cdt.rs
src/filesys/hfs/types/: btree.rs  catalog.rs  common.rs  mdb.rs  mod.rs  plain.rs
src/filesys/rsrc/: map.rs  mod.rs  types.rs
src/phy/: mod.rs  prefix.rs  ram.rs  stackable.rs  trace.rs
src/phy/mem/: log.rs  mod.rs  mux.rs  ram.rs  rc.rs  rom.rs
src/runner/: addressbus.rs  mod.rs  muxaddressbus.rs  prefix.rs  rom.rs
src/serialization/: mod.rs  serialaccess.rs  serialread.rs
src/toolbox/: mod.rs  segment_loader.rs  traphandler.rs
src/tools/: hexdump.rs  mod.rs
src/types/: base.rs
