[package]
name = "marmelade"
version = "0.1.0"
authors = ["Max Sikstrom <max@pengi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

marmelade-derive = { path = "marmelade-derive" }
byteorder = "1.3.2"
chrono = "0.4.7"
clap = "2.33.0"