[package]
name = "marmelade-derive"
version = "0.1.0"
authors = ["Max Sikstrom <max@pengi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "0.6.13"

[dependencies.syn]
version = "0.15.42"
default-features = false
features = [
    "derive",
    "full",
    "parsing",
    "printing",
    "clone-impls",
    "extra-traits",
    "proc-macro"
]
